--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                   <p class=col>MongoDB</p>
                   <p class=col>Mongoose</p>
                   <p class=col>MySQL</p>
+                  <p class=col>SQLite</p>
                 </div>
               </div>
           </div>
@@ -163,7 +164,7 @@
               <img class="card-img-top" src="./img/ScheduleManager.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Schedule Manager</h5>
-                <p class="card-text">A Full Stack project than one can create, read, update, and delete a schedule.</p>
+                <p class="card-text">A Full Stack project that one can create, read, update, and delete a schedule.</p>
                 <div class="row justify-content-center" id="color-text">
                   <p class="col">MongoDB</p>
                   <p class="col">Express</p>
