--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-lg m-5">
             <h2 class="mb-4">Hello!</h2>
             <p class="intro">I'm a Full Stack Developer who is ready and able to apply skills that I have acquired. I have hands-on experience creating Front end applications in MERN, Python/Django, and C#/.NET as well as Back-end applications.</p>
-            <a href="Resume/Yong Oh Noh.pdf" target="_blank" rel="noopener noreferrer" class="btn">Resume</a>
+            <a href="resume/Yong Oh Noh.pdf" target="_blank" rel="noopener noreferrer" class="btn">Resume</a>
           </div>
           <div class="col-lg m-5" id="skills-color">
             <h2 class="mb-4">Skills</h2>
